--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -12,17 +12,47 @@
     "import csv\n",
     "from time import *\n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(0, \"../scripts/\")\n",
+    "from greedy import greedy_mwds\n",
     "\n",
-    "from graphreader import read_graph\n",
-    "\n",
-    "from greedy import greedy_mwds, get_successors"
+    "from lp_model import lp_model\n",
+    "from genetic_algorithm import GeneticAlgorithm\n",
+    "from numpy import mean, std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "import networkx as nx, random\n",
+    "\"\"\"\"\n",
+    "Funkcija koja se koristi za citanje/generisanje grafa\n",
+    "\"\"\"\n",
+    "\n",
+    "def gen_graph_from_edges(instance_path):\n",
+    "    edges = []\n",
+    "    with open(instance_path, 'r') as f:\n",
+    "        for line in f:\n",
+    "            fields = line.strip().split()\n",
+    "            source, target = fields\n",
+    "            edges.append((int(source), int(target)))\n",
+    "\n",
+    "    for i in range(len(edges)):\n",
+    "            edges[i] = (edges[i][0] - 1, edges[i][1] - 1)\n",
+    "\n",
+    "    G = nx.Graph(edges)\n",
+    "    weights = [random.randint(20, 70) for i in range(len(G.nodes))]\n",
+    "    vertices_w = dict(zip(G.nodes, weights))\n",
+    "\n",
+    "    return vertices_w, edges"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "dir_instances = sorted(os.listdir(\"../instances\"))"
@@ -33,125 +63,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "from pulp import *\n",
-    "\n",
-    "def lp_model(vertices_w, edges):\n",
-    "    vertices = list(vertices_w.keys())\n",
-    "\n",
-    "    model = LpProblem(\"Minimum Weighted Directed Domination Set\", LpMinimize)\n",
-    "\n",
-    "    # definisemo varijable za cvorove u grafu\n",
-    "    x = LpVariable.dicts(\"x\", vertices, lowBound=0, upBound=1, cat=LpInteger)\n",
-    "\n",
-    "    # dodajemo funkciju cilja\n",
-    "    model += lpSum([vertices_w[i] * x[i] for i in vertices])\n",
-    "\n",
-    "    # dodajemo ogranicenja\n",
-    "    # Svaki cvor mora biti u podskupu ili imati vezu sa nekim cvorom iz tog podskupa\n",
-    "    for v in vertices:\n",
-    "        constraint = x[v]\n",
-    "        for e in edges:\n",
-    "            if e[1] == v:\n",
-    "                constraint += x[e[0]]\n",
-    "        model += constraint >= 1\n",
-    "\n",
-    "\n",
-    "    # pokrecemo model, sa ogranicenjem na 10 minuta\n",
-    "    time_limit_s = 600\n",
-    "    model.solve(PULP_CBC_CMD(msg=0, maxSeconds=time_limit_s))\n",
-    "\n",
-    "    # kreiramo dominirajuci skup\n",
-    "    domination_set = []\n",
-    "    for i in vertices:\n",
-    "      if x[i].value() == 1:\n",
-    "        domination_set.append(i)\n",
-    "\n",
-    "    objective_value = value(model.objective)\n",
-    "\n",
-    "    # vracamo dominirajuci skup i tezinu\n",
-    "    return domination_set, objective_value\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dimension -  level0\n",
-      "Dimension -  level1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vladimir/anaconda3/envs/operaciona_istrazivanja/lib/python3.10/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
-      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n",
-      "/home/vladimir/anaconda3/envs/operaciona_istrazivanja/lib/python3.10/site-packages/pulp/apis/coin_api.py:95: UserWarning: Parameter maxSeconds is being depreciated for timeLimit\n",
-      "  warnings.warn(\"Parameter maxSeconds is being depreciated for timeLimit\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dimension -  level2\n"
+     "ename": "NameError",
+     "evalue": "name 'dir_instances' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [2], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m subdir \u001B[38;5;129;01min\u001B[39;00m \u001B[43mdir_instances\u001B[49m:\n\u001B[1;32m      2\u001B[0m     dim_path \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mjoin(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../instances/\u001B[39m\u001B[38;5;124m\"\u001B[39m, subdir)\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m subdir\u001B[38;5;241m.\u001B[39mendswith(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m0\u001B[39m\u001B[38;5;124m\"\u001B[39m):\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'dir_instances' is not defined"
      ]
     }
    ],
    "source": [
-    "# prolazak kroz razlicite dimenzije problema\n",
     "for subdir in dir_instances:\n",
     "    dim_path = os.path.join(\"../instances/\", subdir)\n",
-    "    print(\"Dimension - \", subdir)\n",
     "\n",
     "    if subdir.endswith(\"0\"):\n",
     "        instance_dim = \"0\"\n",
-    "        num_vertices = 5\n",
     "    elif subdir.endswith(\"1\"):\n",
     "        instance_dim = \"1\"\n",
-    "        num_vertices = 300\n",
-    "    else:\n",
+    "    elif subdir.endswith(\"2\"):\n",
     "        instance_dim = \"2\"\n",
-    "        num_vertices = 500\n",
+    "\n",
     "\n",
     "    with open(\"../results/results\" + instance_dim + \".csv\", \"w\", newline=\"\") as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "\n",
     "        # header\n",
-    "        writer.writerow([\"Instances\", \"Greedy algorithm\", \"Variable neighborhood search (VNS)\", \"PuLP linar programming\"])\n",
+    "        writer.writerow([\"Instances\", \"Greedy algorithm\", \"Genetic algorithm\", \"PuLP linear programming\"])\n",
+    "        instance_info = \"\"\n",
     "\n",
     "        # prolazak kroz sve instance odredjene dimenzije\n",
     "        for instance in sorted(os.listdir(os.path.abspath(dim_path))):\n",
-    "            instance_path = os.path.join(dim_path, instance)\n",
-    "            vertices, edges = read_graph(instance_path, num_vertices)\n",
-    "            num_edges = len(edges)\n",
+    "            if instance != \"imgs\":\n",
+    "                instance_path = os.path.join(dim_path, instance)\n",
     "\n",
-    "            start = time()\n",
-    "            set, weight = greedy_mwds(vertices, edges)\n",
-    "            end = time()\n",
+    "                if dim_path.endswith(\"0\"):\n",
+    "                    num_vertices = 5\n",
+    "                    instance_info = instance.split(\".txt\")[0]\n",
+    "                else:\n",
+    "                    if instance.__contains__(\"200\"):\n",
+    "                        num_vertices = 200\n",
+    "                        instance_info = instance.split(\".clq\")[0]\n",
+    "                        break\n",
+    "                    elif instance.__contains__(\"300\"):\n",
+    "                        num_vertices = 300\n",
+    "                        instance_info = instance.split(\".clq\")[0]\n",
+    "                        break\n",
+    "                    elif instance.__contains__(\"400\"):\n",
+    "                        num_vertices = 400\n",
+    "                        instance_info = instance.split(\".clq\")[0]\n",
+    "                        break\n",
+    "                    elif instance.__contains__(\"500\"):\n",
+    "                        num_vertices = 500\n",
+    "                        instance_info = instance.split(\".clq\")[0]\n",
+    "                        break\n",
     "\n",
-    "            elapsed = end - start\n",
-    "            greedy_results = \"|Ds| = \" + str(len(set)) + \"\\n\" + \"weight = \" + str(weight) +\"\\n\" + \"T(s) = \" + f\"{elapsed:.3f}\"\n",
+    "                vertices_w, edges = gen_graph_from_edges(instance_path)\n",
     "\n",
-    "            start = time()\n",
-    "            set, weight = lp_model(vertices, edges)\n",
-    "            end = time()\n",
+    "                num_vertices = len(vertices_w)\n",
+    "                num_edges = len(edges)\n",
     "\n",
-    "            elapsed = end - start\n",
-    "            ilp_results = \"|Ds| = \" + str(len(set)) + \"\\n\" + \"weight = \" + str(weight) +\"\\n\" + \"T(s) = \" + f\"{elapsed:.3f}\"\n",
+    "                start = time()\n",
+    "                set, weight = greedy_mwds(vertices_w, edges)\n",
+    "                end = time()\n",
+    "                elapsed = end - start\n",
+    "                greedy_results = \"|Ds| = \" + str(len(set)) + \"\\n\" + \"weight = \" + str(weight) +\"\\n\" + \"T(s) = \" + f\"{elapsed:.3f}\"\n",
+    "                print(\"Greedy \", instance, \" done\")\n",
     "\n",
-    "            instance_info = \"Instance \" + instance_dim + \"lvl\\n\" + str(\"|V| = \") + str(num_vertices) + \"\\n|E| = \" + str(num_edges)\n",
-    "            writer.writerow([instance_info, greedy_results, 0, ilp_results])\n"
+    "                start = time()\n",
+    "                set, weight = lp_model(vertices_w, edges)\n",
+    "                end = time()\n",
+    "                elapsed = end - start\n",
+    "                ilp_results = \"|Ds| = \" + str(len(set)) + \"\\n\" + \"weight = \" + str(weight) +\"\\n\" + \"T(s) = \" + f\"{elapsed:.3f}\"\n",
+    "                print(\"PuLP \", instance, \" done\")\n",
+    "\n",
+    "\n",
+    "                solutions = []\n",
+    "                times = []\n",
+    "                for i in range(10):\n",
+    "                    ga = GeneticAlgorithm(vertices_w, edges, population_size=100, chromosome_length=num_vertices, mutation_rate=0.05, n_generations=100, max_time=600)\n",
+    "                    start = time()\n",
+    "                    solution = ga.run()\n",
+    "                    end = time()\n",
+    "                    solutions.append(solution)\n",
+    "                    times.append(end - start)\n",
+    "\n",
+    "                ds = [s.fitness[0] for s in solutions]\n",
+    "                min_index = ds.index(min(ds))\n",
+    "                min_wds = len([i for i in solutions[min_index].chromosome if i == 1])\n",
+    "                ga_results = \"|Ds| = \" + str(min_wds) + \"\\nmean = \" + str(mean(ds)) + \"\\nmax = \" + str(max(ds)) + \"\\nmin =\" + str(min(ds)) + \"\\nsd = \" + str(round(std(ds), 3)) +\"\\nmean(T) = \", str(round(mean(times), 3))\n",
+    "\n",
+    "                print(\"GA \", instance, \" done\")\n",
+    "\n",
+    "                instance_info += str(\"\\n|V| = \") + str(num_vertices) + \"\\n|E| = \" + str(num_edges)\n",
+    "                writer.writerow([instance_info, greedy_results, ga_results, ilp_results])\n"
    ],
    "metadata": {
     "collapsed": false
