--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def solve(include_greedy, include_ilp, include_ga, ga_selection_method, ga_crossover_rate, ga_mutation_rate, ga_logger):\n",
     "    for subdir in dir_instances:\n",
-    "        dim_path = os.path.join(\"../instances/\", subdir)\n",
+    "        dim_path = os.path.join(\"../instances/\", dir_instances)\n",
     "        instance_dim = \"\"\n",
     "\n",
     "        if subdir.endswith(\"0\"):\n",
-    "            instance_dim = \"0\"\n",
+    "           instance_dim = \"0\"\n",
     "        elif subdir.endswith(\"1\"):\n",
-    "            instance_dim = \"1\"\n",
+    "           instance_dim = \"1\"\n",
     "        elif subdir.endswith(\"2\"):\n",
     "            instance_dim = \"2\"\n",
     "\n",
@@ -94,7 +94,7 @@
     "                    if include_ga:\n",
     "                        solutions = []\n",
     "                        times = []\n",
-    "                        for i in range(10):\n",
+    "                        for i in range(2):\n",
     "                            ga = GeneticAlgorithm(vertices_w, edges, population_size=40, chromosome_length=num_vertices, selection_method=ga_selection_method, crossover_rate=ga_crossover_rate, mutation_rate=ga_mutation_rate, n_generations=100, max_time=600, logger=ga_logger)\n",
     "                            start = time()\n",
     "                            solution = ga.run()\n",
@@ -117,153 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Greedy  instance_10_39.txt  done\n",
-      "ILP  instance_10_39.txt  done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vladimir/anaconda3/envs/operaciona_istrazivanja/lib/python3.10/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
-      "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n",
-      "/home/vladimir/anaconda3/envs/operaciona_istrazivanja/lib/python3.10/site-packages/pulp/apis/coin_api.py:95: UserWarning: Parameter maxSeconds is being depreciated for timeLimit\n",
-      "  warnings.warn(\"Parameter maxSeconds is being depreciated for timeLimit\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GA  instance_10_39.txt  done\n",
-      "Greedy  instance_10_45.txt  done\n",
-      "ILP  instance_10_45.txt  done\n",
-      "GA  instance_10_45.txt  done\n",
-      "Greedy  instance_10_51.txt  done\n",
-      "ILP  instance_10_51.txt  done\n",
-      "GA  instance_10_51.txt  done\n",
-      "Greedy  instance_15_102.txt  done\n",
-      "ILP  instance_15_102.txt  done\n",
-      "GA  instance_15_102.txt  done\n",
-      "Greedy  instance_15_109.txt  done\n",
-      "ILP  instance_15_109.txt  done\n",
-      "GA  instance_15_109.txt  done\n",
-      "Greedy  instance_50_1184.txt  done\n",
-      "ILP  instance_50_1184.txt  done\n",
-      "GA  instance_50_1184.txt  done\n",
-      "Greedy  instance_50_1221.txt  done\n",
-      "ILP  instance_50_1221.txt  done\n",
-      "GA  instance_50_1221.txt  done\n",
-      "Greedy  instance_5_11.txt  done\n",
-      "ILP  instance_5_11.txt  done\n",
-      "GA  instance_5_11.txt  done\n",
-      "Greedy  instance_5_6.txt  done\n",
-      "ILP  instance_5_6.txt  done\n",
-      "GA  instance_5_6.txt  done\n",
-      "Greedy  instance_5_9.txt  done\n",
-      "ILP  instance_5_9.txt  done\n",
-      "GA  instance_5_9.txt  done\n",
-      "Greedy  instance_9_12.txt  done\n",
-      "ILP  instance_9_12.txt  done\n",
-      "GA  instance_9_12.txt  done\n",
-      "Greedy  brock200_1.clq  done\n",
-      "ILP  brock200_1.clq  done\n",
-      "GA  brock200_1.clq  done\n",
-      "Greedy  brock200_2.clq  done\n",
-      "ILP  brock200_2.clq  done\n",
-      "GA  brock200_2.clq  done\n",
-      "Greedy  brock200_3.clq  done\n",
-      "ILP  brock200_3.clq  done\n",
-      "GA  brock200_3.clq  done\n",
-      "Greedy  brock200_4.clq  done\n",
-      "ILP  brock200_4.clq  done\n",
-      "GA  brock200_4.clq  done\n",
-      "Greedy  c-fat200-1.clq  done\n",
-      "ILP  c-fat200-1.clq  done\n",
-      "GA  c-fat200-1.clq  done\n",
-      "Greedy  c-fat200-2.clq  done\n",
-      "ILP  c-fat200-2.clq  done\n",
-      "GA  c-fat200-2.clq  done\n",
-      "Greedy  c-fat200-5.clq  done\n",
-      "ILP  c-fat200-5.clq  done\n",
-      "GA  c-fat200-5.clq  done\n",
-      "Greedy  p_hat300-1.clq  done\n",
-      "ILP  p_hat300-1.clq  done\n",
-      "GA  p_hat300-1.clq  done\n",
-      "Greedy  p_hat300-2.clq  done\n",
-      "ILP  p_hat300-2.clq  done\n",
-      "GA  p_hat300-2.clq  done\n",
-      "Greedy  p_hat300-3.clq  done\n",
-      "ILP  p_hat300-3.clq  done\n",
-      "GA  p_hat300-3.clq  done\n",
-      "Greedy  san200_0.7_1.clq  done\n",
-      "ILP  san200_0.7_1.clq  done\n",
-      "GA  san200_0.7_1.clq  done\n",
-      "Greedy  san200_0.7_2.clq  done\n",
-      "ILP  san200_0.7_2.clq  done\n",
-      "GA  san200_0.7_2.clq  done\n",
-      "Greedy  san200_0.9_1.clq  done\n",
-      "ILP  san200_0.9_1.clq  done\n",
-      "GA  san200_0.9_1.clq  done\n",
-      "Greedy  san200_0.9_2.clq  done\n",
-      "ILP  san200_0.9_2.clq  done\n",
-      "GA  san200_0.9_2.clq  done\n",
-      "Greedy  san200_0.9_3.clq  done\n",
-      "ILP  san200_0.9_3.clq  done\n",
-      "GA  san200_0.9_3.clq  done\n",
-      "Greedy  sanr200_0.7.clq  done\n",
-      "ILP  sanr200_0.7.clq  done\n",
-      "GA  sanr200_0.7.clq  done\n",
-      "Greedy  sanr200_0.9.clq  done\n",
-      "ILP  sanr200_0.9.clq  done\n",
-      "GA  sanr200_0.9.clq  done\n",
-      "Greedy  brock400_2.clq  done\n",
-      "ILP  brock400_2.clq  done\n",
-      "GA  brock400_2.clq  done\n",
-      "Greedy  brock400_3.clq  done\n",
-      "ILP  brock400_3.clq  done\n",
-      "GA  brock400_3.clq  done\n",
-      "Greedy  brock400_4.clq  done\n",
-      "ILP  brock400_4.clq  done\n",
-      "GA  brock400_4.clq  done\n",
-      "Greedy  c-fat500-1.clq  done\n",
-      "ILP  c-fat500-1.clq  done\n",
-      "GA  c-fat500-1.clq  done\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../instances/level2/c-fat500-10.clq'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [9], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43msolve\u001B[49m\u001B[43m(\u001B[49m\u001B[43minclude_greedy\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minclude_ilp\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minclude_ga\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mga_selection_method\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mtournament\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mga_crossover_rate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.8\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mga_mutation_rate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mga_logger\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [8], line 30\u001B[0m, in \u001B[0;36msolve\u001B[0;34m(include_greedy, include_ilp, include_ga, ga_selection_method, ga_crossover_rate, ga_mutation_rate, ga_logger)\u001B[0m\n\u001B[1;32m     27\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m     28\u001B[0m     instance_info \u001B[38;5;241m=\u001B[39m instance\u001B[38;5;241m.\u001B[39msplit(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m.clq\u001B[39m\u001B[38;5;124m\"\u001B[39m)[\u001B[38;5;241m0\u001B[39m]\n\u001B[0;32m---> 30\u001B[0m vertices_w, edges \u001B[38;5;241m=\u001B[39m \u001B[43mread_graph\u001B[49m\u001B[43m(\u001B[49m\u001B[43minstance_path\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m\n\u001B[1;32m     32\u001B[0m num_vertices \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlen\u001B[39m(vertices_w)\n\u001B[1;32m     33\u001B[0m num_edges \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlen\u001B[39m(edges)\n",
-      "File \u001B[0;32m~/PycharmProjects/operaciona_istrazivanja/scripts/graph_reader.py:11\u001B[0m, in \u001B[0;36mread_graph\u001B[0;34m(instance_path, gen_by_instance)\u001B[0m\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mread_graph\u001B[39m(instance_path, gen_by_instance):\n\u001B[1;32m     10\u001B[0m     edges \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m---> 11\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43minstance_path\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[1;32m     12\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m line \u001B[38;5;129;01min\u001B[39;00m f:\n\u001B[1;32m     13\u001B[0m             fields \u001B[38;5;241m=\u001B[39m line\u001B[38;5;241m.\u001B[39mstrip()\u001B[38;5;241m.\u001B[39msplit()\n",
-      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../instances/level2/c-fat500-10.clq'"
-     ]
-    }
-   ],
-   "source": [
-    "solve(include_greedy=True, include_ilp=True, include_ga=True, ga_selection_method=\"tournament\", ga_crossover_rate=0.8, ga_mutation_rate=0.01, ga_logger=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "solve(include_greedy=False, include_ilp=False, include_ga=True, ga_selection_method=\"tournament\", ga_crossover_rate=0.8, ga_mutation_rate=0.01, ga_logger=False)"
+   ]
   },
   {
    "cell_type": "code",
