--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "def solve(include_greedy, include_ilp, include_ga, ga_selection_method, ga_crossover_rate, ga_mutation_rate, ga_logger):\n",
     "    for subdir in dir_instances:\n",
-    "        dim_path = os.path.join(\"../instances/\", dir_instances)\n",
+    "        dim_path = os.path.join(\"../instances/\", subdir)\n",
     "        instance_dim = \"\"\n",
     "\n",
     "        if subdir.endswith(\"0\"):\n",
