--- a/main/main.ipynb
+++ b/main/main.ipynb
@@ -65,7 +65,7 @@
     "            elif subdir.endswith(\"2\"):\n",
     "              instance_dim = \"2\"\n",
     "\n",
-    "            with open(\"../results/results_\" + instance_dim + str(datetime.now().strftime(\"_%d-%m-%Y_%H-%M\")) + \".csv\", \"w\", newline=\"\") as csvfile:\n",
+    "            with open(\"../results/results_lvl\" + instance_dim + str(datetime.now().strftime(\"_%d-%m-%Y_%H-%M\")) + \".csv\", \"w\", newline=\"\") as csvfile:\n",
     "                writer = csv.writer(csvfile)\n",
     "\n",
     "                writer.writerow([\"Instances\", \"Greedy algorithm\", \"ILP\", \"Genetic algorithm\"])\n",
