--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -95,7 +95,7 @@
         "        graph = Graph()\n",
         "        graph.create_from_data(vertices_w, edges)\n",
         "        for i in range(10):\n",
-        "            gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=360, max_no_improvement=100, **params)\n",
+        "            gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=100, **params)\n",
         "            gen_algo.run()\n",
         "            ga_results.append(gen_algo.previous_best_fitness)\n",
         "            ga_time.append(gen_algo.running_time)\n",
@@ -153,7 +153,7 @@
         "            graph = Graph()\n",
         "            graph.create_from_data(vertices_w, edges)\n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=360, max_no_improvement=250, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=250, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -201,7 +201,7 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":100,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":100\n",
+        "    \"n_generations\":500,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":100\n",
         "}\n",
         "\n",
         "for folder, instances in instances_m_dict.items():\n",
@@ -216,10 +216,11 @@
         "            graph = Graph()\n",
         "            graph.create_from_data(vertices_w, edges)\n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=360, max_no_improvement=5000, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=200, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
+        "                print(f\"{folder} {i}, {ga_results}\")\n",
         "            \n",
         "            results['ga_mean'].append(round(mean(ga_results), 6))\n",
         "            results['ga_max'].append(max(ga_results))\n",
@@ -245,9 +246,106 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "V500E1000 0, [10145]\n",
+            "V500E1000 1, [10145, 9531]\n",
+            "V500E1000 2, [10145, 9531, 9734]\n",
+            "V500E1000 3, [10145, 9531, 9734, 9334]\n",
+            "V500E1000 4, [10145, 9531, 9734, 9334, 9427]\n",
+            "V500E1000 5, [10145, 9531, 9734, 9334, 9427, 9757]\n",
+            "V500E1000 6, [10145, 9531, 9734, 9334, 9427, 9757, 9791]\n",
+            "V500E1000 7, [10145, 9531, 9734, 9334, 9427, 9757, 9791, 9518]\n",
+            "V500E1000 8, [10145, 9531, 9734, 9334, 9427, 9757, 9791, 9518, 9571]\n",
+            "V500E1000 9, [10145, 9531, 9734, 9334, 9427, 9757, 9791, 9518, 9571, 9739]\n",
+            "V500E2000 0, [6338]\n",
+            "V500E2000 1, [6338, 6305]\n",
+            "V500E2000 2, [6338, 6305, 6851]\n",
+            "V500E2000 3, [6338, 6305, 6851, 6982]\n",
+            "V500E2000 4, [6338, 6305, 6851, 6982, 6854]\n",
+            "V500E2000 5, [6338, 6305, 6851, 6982, 6854, 6696]\n",
+            "V500E2000 6, [6338, 6305, 6851, 6982, 6854, 6696, 7446]\n",
+            "V500E2000 7, [6338, 6305, 6851, 6982, 6854, 6696, 7446, 7081]\n",
+            "V500E2000 8, [6338, 6305, 6851, 6982, 6854, 6696, 7446, 7081, 6967]\n",
+            "V500E2000 9, [6338, 6305, 6851, 6982, 6854, 6696, 7446, 7081, 6967, 6851]\n",
+            "V500E5000 0, [3957]\n",
+            "V500E5000 1, [3957, 4039]\n",
+            "V500E5000 2, [3957, 4039, 4215]\n",
+            "V500E5000 3, [3957, 4039, 4215, 4362]\n",
+            "V500E5000 4, [3957, 4039, 4215, 4362, 4096]\n",
+            "V500E5000 5, [3957, 4039, 4215, 4362, 4096, 4202]\n",
+            "V500E5000 6, [3957, 4039, 4215, 4362, 4096, 4202, 4085]\n",
+            "V500E5000 7, [3957, 4039, 4215, 4362, 4096, 4202, 4085, 4056]\n",
+            "V500E5000 8, [3957, 4039, 4215, 4362, 4096, 4202, 4085, 4056, 3930]\n",
+            "V500E5000 9, [3957, 4039, 4215, 4362, 4096, 4202, 4085, 4056, 3930, 3935]\n",
+            "V800E1000 0, [27741]\n",
+            "V800E1000 1, [27741, 27741]\n",
+            "V800E1000 2, [27741, 27741, 27741]\n",
+            "V800E1000 3, [27741, 27741, 27741, 27741]\n",
+            "V800E1000 4, [27741, 27741, 27741, 27741, 27741]\n",
+            "V800E1000 5, [27741, 27741, 27741, 27741, 27741, 20665]\n",
+            "V800E1000 6, [27741, 27741, 27741, 27741, 27741, 20665, 27741]\n",
+            "V800E1000 7, [27741, 27741, 27741, 27741, 27741, 20665, 27741, 27741]\n",
+            "V800E1000 8, [27741, 27741, 27741, 27741, 27741, 20665, 27741, 27741, 27741]\n",
+            "V800E1000 9, [27741, 27741, 27741, 27741, 27741, 20665, 27741, 27741, 27741, 27741]\n",
+            "V800E2000 0, [27741]\n",
+            "V800E2000 1, [27741, 27741]\n",
+            "V800E2000 2, [27741, 27741, 16950]\n",
+            "V800E2000 3, [27741, 27741, 16950, 27741]\n",
+            "V800E2000 4, [27741, 27741, 16950, 27741, 15996]\n",
+            "V800E2000 5, [27741, 27741, 16950, 27741, 15996, 27741]\n",
+            "V800E2000 6, [27741, 27741, 16950, 27741, 15996, 27741, 16385]\n",
+            "V800E2000 7, [27741, 27741, 16950, 27741, 15996, 27741, 16385, 15840]\n",
+            "V800E2000 8, [27741, 27741, 16950, 27741, 15996, 27741, 16385, 15840, 27741]\n",
+            "V800E2000 9, [27741, 27741, 16950, 27741, 15996, 27741, 16385, 15840, 27741, 15645]\n",
+            "V800E5000 0, [10067]\n",
+            "V800E5000 1, [10067, 11026]\n",
+            "V800E5000 2, [10067, 11026, 11227]\n",
+            "V800E5000 3, [10067, 11026, 11227, 9979]\n",
+            "V800E5000 4, [10067, 11026, 11227, 9979, 10667]\n",
+            "V800E5000 5, [10067, 11026, 11227, 9979, 10667, 11790]\n",
+            "V800E5000 6, [10067, 11026, 11227, 9979, 10667, 11790, 10083]\n",
+            "V800E5000 7, [10067, 11026, 11227, 9979, 10667, 11790, 10083, 10252]\n",
+            "V800E5000 8, [10067, 11026, 11227, 9979, 10667, 11790, 10083, 10252, 10348]\n",
+            "V800E5000 9, [10067, 11026, 11227, 9979, 10667, 11790, 10083, 10252, 10348, 11052]\n",
+            "V1000E1000 0, [34260]\n",
+            "V1000E1000 1, [34260, 34260]\n",
+            "V1000E1000 2, [34260, 34260, 34260]\n",
+            "V1000E1000 3, [34260, 34260, 34260, 34260]\n",
+            "V1000E1000 4, [34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E1000 5, [34260, 34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E1000 6, [34260, 34260, 34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E1000 7, [34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E1000 8, [34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E1000 9, [34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260, 34260]\n",
+            "V1000E5000 0, [15573]\n",
+            "V1000E5000 1, [15573, 16078]\n",
+            "V1000E5000 2, [15573, 16078, 17143]\n",
+            "V1000E5000 3, [15573, 16078, 17143, 15593]\n",
+            "V1000E5000 4, [15573, 16078, 17143, 15593, 15295]\n",
+            "V1000E5000 5, [15573, 16078, 17143, 15593, 15295, 15846]\n",
+            "V1000E5000 6, [15573, 16078, 17143, 15593, 15295, 15846, 16609]\n",
+            "V1000E5000 7, [15573, 16078, 17143, 15593, 15295, 15846, 16609, 15416]\n",
+            "V1000E5000 8, [15573, 16078, 17143, 15593, 15295, 15846, 16609, 15416, 16274]\n",
+            "V1000E5000 9, [15573, 16078, 17143, 15593, 15295, 15846, 16609, 15416, 16274, 15786]\n",
+            "V1000E10000 0, [11896]\n",
+            "V1000E10000 1, [11896, 11507]\n",
+            "V1000E10000 2, [11896, 11507, 12017]\n",
+            "V1000E10000 3, [11896, 11507, 12017, 12161]\n",
+            "V1000E10000 4, [11896, 11507, 12017, 12161, 11840]\n",
+            "V1000E10000 5, [11896, 11507, 12017, 12161, 11840, 12856]\n",
+            "V1000E10000 6, [11896, 11507, 12017, 12161, 11840, 12856, 11828]\n",
+            "V1000E10000 7, [11896, 11507, 12017, 12161, 11840, 12856, 11828, 11717]\n",
+            "V1000E10000 8, [11896, 11507, 12017, 12161, 11840, 12856, 11828, 11717, 12094]\n",
+            "V1000E10000 9, [11896, 11507, 12017, 12161, 11840, 12856, 11828, 11717, 12094, 11623]\n"
+          ]
+        }
+      ],
       "source": [
         "results = {\n",
         "    'instance': [],\n",
@@ -262,7 +360,7 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":100,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":100\n",
+        "    \"n_generations\":1000,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":100\n",
         "}\n",
         "\n",
         "for folder, instances in instances_l_dict.items():\n",
@@ -277,11 +375,12 @@
         "            graph = Graph()\n",
         "            graph.create_from_data(vertices_w, edges)\n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=360, max_no_improvement=10000, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=200, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
-        "            \n",
+        "                print(f\"{folder} {i}, {ga_results}\")\n",
+        "\n",
         "            results['ga_mean'].append(round(mean(ga_results),6))\n",
         "            results['ga_max'].append(max(ga_results))\n",
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
@@ -303,13 +402,6 @@
         "\n",
         "save_results_to_csv(results, f'../results/new_large_instances_g{params[\"n_generations\"]}_p{params[\"population_size\"]}.csv')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
