--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -12,12 +12,13 @@
         "sys.path.append(current_directory)\n",
         "\n",
         "import time\n",
-        "import polars as pl"
+        "import polars as pl\n",
+        "from numpy import mean, std"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -26,8 +27,7 @@
         "from main.ilp_model import ilp_mwdds\n",
         "from main.greedy_algorithm import greedy_mwds, greedy_mwdds, greedy_mwds_aco\n",
         "from main.genetic_algorithm import GeneticAlgorithm, fitness_func\n",
-        "from main.graph import Graph\n",
-        "from numpy import mean, std\n",
+        "from utils.graph import Graph\n",
         "\n",
         "test_instances_pth = '../instances/test_instances/'\n",
         "test_instances = os.listdir(test_instances_pth)\n",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -65,9 +65,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "|                                        | ▁▃▅ 0/10 [0%] in 0s (~0s, 0.0/s) "
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "|████⚠︎                                   | (!) 1/10 [10%] in 1.0s (0.99/s)      \n",
+            "|████⚠︎                                   | (!) 1/10 [10%] in 0.9s (1.11/s)      \n",
+            "|████⚠︎                                   | (!) 1/10 [10%] in 0.9s (1.09/s)      \n",
+            "|████⚠︎                                   | (!) 1/10 [10%] in 1.1s (0.88/s)      \n",
+            "|████⚠︎                                   | (!) 1/10 [10%] in 0.8s (1.31/s)      \n"
+          ]
+        }
+      ],
       "source": [
         "results = {\n",
         "    'instance': [],\n",
@@ -99,7 +118,7 @@
         "            gen_algo.run()\n",
         "            ga_results.append(gen_algo.previous_best_fitness)\n",
         "            ga_time.append(gen_algo.running_time)\n",
-        "        \n",
+        "    \n",
         "        results['ga_mean'].append(round(mean(ga_results),6))\n",
         "        results['ga_max'].append(max(ga_results))\n",
         "        results['ga_std'].append(round(std(ga_results), 6))\n",
@@ -116,7 +135,7 @@
         "        results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "# save file with params\n",
-        "save_results_to_csv(results, '../results/new_test_instances.csv')"
+        "save_results_to_csv(results, f'../results/new_test_instances_g{params[\"n_generations\"]}_p{params[\"population_size\"]}.csv')"
       ]
     },
     {
